syntax = "proto2";

package SulDownloaderProto;


//FIXME LINUXEP-6537: add information about the purpose of these entries.

message ConfigurationSettings
{
    repeated string sophosURLs = 1;
    repeated string updateCache = 2;
    message CredentialT
    {
        optional string username = 1;
        optional string password = 2;
    }
    message ProxyCredentialT
    {
        optional string username = 1;
        optional string password = 2;
        optional string proxyType = 3;
    }
    message ProxyT
    {
        optional string url = 1;
        optional ProxyCredentialT credential = 2;
    }

    optional CredentialT credential = 3;
    optional ProxyT proxy = 4;
    optional string certificatePath = 5;
    optional string installationRootPath = 6;
    optional string systemSslPath = 7;
    optional string cacheUpdateSslPath = 8;

    optional string releaseTag = 9 [default="RECOMMENDED"];
    optional string baseVersion = 10;
    optional string primary = 11;
    repeated string fullNames = 12;
    repeated string prefixNames = 13;
    repeated string installArguments = 14;

    enum LogLevelOption
    {
       NORMAL = 0;
       VERBOSE = 1;
    }
    optional LogLevelOption logLevel = 15 [default=NORMAL];
    optional bool forceReinstallAllProducts = 16 [default=false];
    repeated string manifestNames = 17;

    message Subscription
    {
        optional string rigidName = 1;
        optional string baseVersion = 2;
        optional string tag = 3;
        optional string fixVersion = 4;
    }

    optional Subscription primarySubscription = 18;
    repeated Subscription products = 19;
    repeated string features = 20;
    enum ConfigVersion
    {
       V1=0;
       V2=1; // Introduced features and subscriptions
    }
    optional ConfigVersion  configVersion = 21 [default=V1];

}
